--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,16 @@
         "outDir": "dist",
         "module": "commonjs",
         "moduleResolution": "node",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "declaration": true,
         "sourceMap": true,
-        "target": "ES2020",
-        "lib": ["ES2020", "DOM"]
+        "target": "es2021",
+        "lib": ["es2021", "DOM"]
     },
     "exclude": ["example.ts"]
 }
